css/to_do.css
.content{
  display: flex;
  justify-content: space-between;
  font-family: sans-serif;
  margin: 20px;
}

.content h1{
  color: #708090;
  text-align: center;
  font-size: 28px;
}

.dropzone{
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  align-content: flex-start;
  align-items: flex-start;
  width: 500px;
  height: 660px;
  overflow: auto;
  margin: 10px;
  padding-top: 20px;
  border-radius: 10px;
  box-shadow: 1px 1px 1px #888888;
}

#to-dos {
  background: #7FFFD4;
}

#finish {
  background: #DDA0DD;
}

#draggable{
  background: transparent;
  margin: 10px;
  display: flex;
  flex-direction: column;
  position: relative;
}

#draggable img{
  width: 165px;
  height: 165px;
  border-radius: 5px;
  box-shadow: 5px 5px 5px #888888;
}


#draggable textarea{
  width: 150px;
  height: 150px;
  background: #FFFACD;
  border: 1px solid transparent;
  border-radius: 5px;
  padding: 20px;
  box-shadow: 5px 5px 5px #888888;
}

.delete, .post-map{
  position: absolute;
  z-index: 1000;
  background: none;
  border: none;
  font-weight: bold;
  top: 10px;
  left: 10px;
  font-size: 10px;
}

.post-map{
  top: 170px;
}

.dragndrop{
  display: flex;
  margin: 0 auto;
}

.add-to-do, .finish-all{
  font-size: 40px;
}

.to-do-buttons{
  display: flex;
  justify-content: space-between;
  width: 500px;
}

.add-gif {
  font-size: 20px !important;
}

.main-container{
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
}

#map{
  border-radius: 5px;
  /*box-shadow: 1px 1px 1px #888888;*/

}

@media only screen
and (min-width : 1360px) {

  .logos{
    position: fixed;
    left: 10%;
    top: 10%;
  }

}

@media only screen
and (max-width : 1180px) {

  .logos{
    display: none;
  }

}


.add-to-do, .finish-all{
  margin-left: 4%;
}

#pac-input{
  background: white;
  width: 300px;
}

.red{
  color: red;
}

.green{
  color: green;
}

.position{
  font-size: 25px;
  cursor: pointer;
}

.no-show{
  display: none;
}

.position:hover + .no-show{
  display: block;
}

#map {
  z-index: 2000;
}

